tests/core/snapshots/test-http-batchKey-rename.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type BankAccount {
  bic: String!
  iban: String!
  id: ID!
}

scalar Bytes

scalar Date

scalar Email

scalar Empty

scalar Int128

scalar Int16

scalar Int32

scalar Int64

scalar Int8

scalar JSON

scalar PhoneNumber

type Query {
  transactions: [Transaction!]!
}

type Transaction {
  BankAccounts: [BankAccount!]!
  bank_account_id: String!
  id: ID!
  slug: String!
}

scalar UInt128

scalar UInt16

scalar UInt32

scalar UInt64

scalar UInt8

scalar Url

schema {
  query: Query
}
