tests/core/snapshots/test-http-batchKey-rename.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
  @server(port: 8000)
  @upstream(baseURL: "http://jsonplaceholder.typicode.com", batch: {delay: 10, headers: [], maxSize: 1000}) {
  query: Query
}

type BankAccount {
  bic: String!
  iban: String!
  id: ID!
}

type Query {
  transactions: [Transaction!]! @http(path: "/transactions")
}

type Transaction {
  BankAccounts: [BankAccount!]!
    @http(
      batchKey: [{query: "bank_account_ids[]", object: "id"}]
      path: "/v1/bank_accounts"
      query: [{key: "bank_account_ids[]", value: "{{.value.bank_account_id}}"}]
    )
  bank_account_id: String!
  id: ID!
  slug: String!
}
