tests/core/snapshots/test-http-batchKey.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Bar {
  barName: String!
  id: ID!
}

scalar Bytes

scalar Date

scalar DateTime

scalar Email

scalar Empty

type Foo {
  barId: String!
  bars: [Bar!]!
  fooName: String!
  id: ID!
}

type FooResponse {
  foos: [Foo!]!
}

scalar Int128

scalar Int16

scalar Int32

scalar Int64

scalar Int8

scalar JSON

scalar PhoneNumber

type Query {
  foos: FooResponse
}

scalar UInt128

scalar UInt16

scalar UInt32

scalar UInt64

scalar UInt8

scalar Url

schema {
  query: Query
}
